<resources>
    <string name="app_name">MonkeyAPP</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MonkeyAPP</string>
    <string name="nav_header_subtitle">ALPHA V0.01</string>
    <string name="nav_header_desc">Menú</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Herramientas</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Acerca</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="devs">Batuzzai \n Fromiti</string>

    <string name="desc">imagen</string>
    <string name="debug">SKIP MENU</string>

    <string name="registro_title">REGISTRO</string>
    <string name="names">Nombres</string>
    <string name="surnames">Apellidos</string>
    <string name="age">Edad</string>
    <string name="reppswd">Repetir contraseña</string>
    <string name="terminos">Acepto las condiciones y términos del servicio</string>
</resources>
